add basic test cases

--- a/gatewaytest/package.json
+++ b/gatewaytest/package.json
@@ -7,6 +7,7 @@
     "test:all": "TEST_SET=all cypress run",
     "test:protocol-check": "TEST_SET=protocol-check cypress run",
     "test:basic": "TEST_SET=basic cypress run",
+    "test:comprehensive": "TEST_SET=comprehensive cypress run",
     "test:staging": "ENVIRONMENT=staging TEST_SET=all cypress run",
     "test:prod": "ENVIRONMENT=production TEST_SET=all cypress run",
     "test:timeout:10s": "TIMEOUT=10000 cypress run",
