--- a/gatewaytest/package.json
+++ b/gatewaytest/package.json
@@ -1,16 +1,17 @@
 {
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "cypress": "^15.7.1"
   },
   "scripts": {
     "test": "cypress run",
-    "test:all": "TEST_SET=all cypress run",
-    "test:protocol-check": "TEST_SET=protocol-check cypress run",
-    "test:basic": "TEST_SET=basic cypress run",
-    "test:comprehensive": "TEST_SET=comprehensive cypress run",
-    "test:staging": "ENVIRONMENT=staging TEST_SET=all cypress run",
-    "test:prod": "ENVIRONMENT=production TEST_SET=all cypress run",
-    "test:timeout:10s": "TIMEOUT=10000 cypress run",
+    "test:all": "cross-env TEST_SET=all cypress run",
+    "test:protocol-check": "cross-env TEST_SET=protocol-check cypress run",
+    "test:basic": "cross-env TEST_SET=basic cypress run",
+    "test:comprehensive": "cross-env TEST_SET=comprehensive cypress run",
+    "test:staging": "cross-env ENVIRONMENT=staging TEST_SET=all cypress run",
+    "test:prod": "cross-env ENVIRONMENT=production TEST_SET=all cypress run",
+    "test:timeout:10s": "cross-env TIMEOUT=10000 cypress run",
     "cypress:open": "cypress open"
   }
 }
