--- a/gatewaytest/package.json
+++ b/gatewaytest/package.json
@@ -8,6 +8,7 @@
     "test:all": "cross-env TEST_SET=all cypress run",
     "test:basic": "cross-env TEST_SET=basic cypress run",
     "test:comprehensive": "cross-env TEST_SET=comprehensive cypress run",
+    "test:ui": "cross-env TEST_SET=ui cypress run",
     "test:staging": "cross-env ENVIRONMENT=staging TEST_SET=all cypress run",
     "test:prod": "cross-env ENVIRONMENT=production TEST_SET=all cypress run",
     "test:timeout:10s": "cross-env TIMEOUT=10000 cypress run",
